# Distributed_System

./: .gitignore  CMakeLists.txt  FindFUSE.cmake  README  Readme.md  TEAM  client.cpp  client_grpc.cpp  createBuild.sh  gen_proto.sh  hello.grpc.pb.h  hello.pb.cc  server.cpp
fuse/: .gitignore  Makefile  client.cpp  install.md  server.hpp
includes/: hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h
protos/: hello.proto
test_folder/: test.cpp
